# ic-aptos

./: Cargo.toml  Makefile  README.md
crates/aptos-api-types/: Cargo.toml
crates/aptos-api-types/src/: error.rs  lib.rs  move_types.rs  transaction.rs  wrappers.rs
crates/aptos-cached-packages/: Cargo.toml
crates/aptos-cached-packages/src/: aptos_framework_sdk_builder.rs  aptos_stdlib.rs  lib.rs
crates/aptos-crypto/: Cargo.toml
crates/aptos-crypto/src/: hash.rs  lib.rs  traits.rs
crates/aptos-crypto/src/ed25519/: ed25519_keys.rs  ed25519_sigs.rs  mod.rs
crates/aptos-types/: Cargo.toml
crates/aptos-types/src/: access_path.rs  account_address.rs  contract_event.rs  event.rs  lib.rs  utility_coin.rs
crates/aptos-types/src/account_config/events/: new_epoch.rs
crates/aptos-types/src/account_config/resources/: aggregator.rs  chain_id.rs  coin_info.rs  coin_store.rs  core_account.rs  fungible_store.rs  object.rs
crates/aptos-types/src/on_chain_config/: mod.rs
crates/aptos-types/src/transaction/: authenticator.rs  mod.rs  script.rs  user_transaction_context.rs
crates/move-core-types/: Cargo.toml
crates/move-core-types/src/: account_address.rs  identifier.rs  language_storage.rs  lib.rs  parser.rs  transaction_argument.rs  u256.rs  value.rs  vm_status.rs
