[package]
name = "aptos-types"
description = "Aptos core types"
version = "0.0.3"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }
# base64 = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
# hashbrown = { workspace = true }
hex = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { workspace = true }
# num-bigint = { workspace = true }
# num-derive = { workspace = true }
# num-traits = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
# serde-big-array = { workspace = true }
serde_bytes = { workspace = true }
candid = { workspace = true }
# serde_json = { workspace = true }
# serde_with = { workspace = true }
# serde_yaml = { workspace = true }
# strum = { workspace = true }
# strum_macros = { workspace = true }


[dev-dependencies]
# bcs = { workspace = true }
