[package]
name = "move-core-types"
version = "0.0.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
# dearbitrary = { workspace = true, optional = true, features = ["derive"] }
ethnum = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
once_cell = { workspace = true }
# getrandom = { version = "0.2", features = ["custom"] }
getrandom = { workspace = true }
primitive-types = { workspace = true,features = ["impl-serde"] }
# primitive-types = { version = "0.10" }
# proptest = { workspace = true, optional = true }
# proptest-derive = { workspace = true, optional = true }
# Cannot use workspace version as aptos-core currently cannot be upgraded
# to newer rand. See https://github.com/aptos-labs/aptos-core/issues/13031
# rand = { version = "0.8.5" }
ref-cast = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
uint = { workspace = true }

[dev-dependencies]
